bulma, images, stories, framework set up

--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,6 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 markdown: kramdown
 sass:
   sass_dir: _sass
+
+collections:
+  stories:
